# minecraft-maps-scraper

./: .gitignore  README.md  maps.json  pyproject.toml  type.py  utils.py
minecraftmaps.com/: downloader.py  metadata.py  type.py
minecraftmaps.com/data/: metadata.json
