[project]
name = "minecraft-maps-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.12.3",
    "cloudscraper>=1.2.71",
    "html5lib>=1.1",
    "jsonpickle>=4.0.1",
    "lxml>=5.3.0",
    "markdownify>=0.14.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
